--- a/src/student_design_helper.ipynb
+++ b/src/student_design_helper.ipynb
@@ -167,10 +167,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1 ResNet-34 vs. ResNet-18"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -191,6 +198,72 @@
     "             'roi_heads.box_roi_pool': 'roi_heads.box_roi_pool',\n",
     "             'roi_heads.box_predictor': 'roi_heads.box_predictor'}\n",
     "compare_io_shapes(torch.rand(1, 3, 400, 600), faster_rcnn_resnet34, faster_rcnn_resnet18, path_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 ResNet-50 vs. ResNet-18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tr style=\"font-weight:bold\"><td style=\"text-align:center\">Teacher path</td><td style=\"text-align:center\">Student Path</td><td colspan=\"3\" style=\"text-align:center;\">Input shape</td><td colspan=\"3\" style=\"text-align:center;\">Output shape</td></tr><tr><td>backbone.fpn</td><td>backbone.fpn</td><td style=\"background-color:red;\">[({0: torch.Size([1, 256, 200, 304]), 1: torch.Size([1, 512, 100, 152]), 2: torch.Size([1, 1024, 50, 76]), 3: torch.Size([1, 2048, 25, 38])},)]</td><td style=\"background-color:red;white-space: nowrap;\"><-></td><td style=\"background-color:red;\">[({0: torch.Size([1, 64, 200, 304]), 1: torch.Size([1, 128, 100, 152]), 2: torch.Size([1, 256, 50, 76]), 3: torch.Size([1, 512, 25, 38])},)]</td><td style=\"background-color:green;\">[{0: torch.Size([1, 256, 200, 304]), 1: torch.Size([1, 256, 100, 152]), 2: torch.Size([1, 256, 50, 76]), 3: torch.Size([1, 256, 25, 38]), 'pool': torch.Size([1, 256, 13, 19])}]</td><td style=\"background-color:green;white-space: nowrap;\"><-></td><td style=\"background-color:green;\">[{0: torch.Size([1, 256, 200, 304]), 1: torch.Size([1, 256, 100, 152]), 2: torch.Size([1, 256, 50, 76]), 3: torch.Size([1, 256, 25, 38]), 'pool': torch.Size([1, 256, 13, 19])}]</td></tr><tr><td>roi_heads.box_roi_pool</td><td>roi_heads.box_roi_pool</td><td style=\"background-color:green;\">[({0: torch.Size([1, 256, 200, 304]), 1: torch.Size([1, 256, 100, 152]), 2: torch.Size([1, 256, 50, 76]), 3: torch.Size([1, 256, 25, 38]), 'pool': torch.Size([1, 256, 13, 19])}, [torch.Size([1000, 4])], [(800, 1200)])]</td><td style=\"background-color:green;white-space: nowrap;\"><-></td><td style=\"background-color:green;\">[({0: torch.Size([1, 256, 200, 304]), 1: torch.Size([1, 256, 100, 152]), 2: torch.Size([1, 256, 50, 76]), 3: torch.Size([1, 256, 25, 38]), 'pool': torch.Size([1, 256, 13, 19])}, [torch.Size([1000, 4])], [(800, 1200)])]</td><td style=\"background-color:green;\">[torch.Size([1000, 256, 7, 7])]</td><td style=\"background-color:green;white-space: nowrap;\"><-></td><td style=\"background-color:green;\">[torch.Size([1000, 256, 7, 7])]</td></tr><tr><td>roi_heads.box_predictor</td><td>roi_heads.box_predictor</td><td style=\"background-color:green;\">[torch.Size([1000, 1024])]</td><td style=\"background-color:green;white-space: nowrap;\"><-></td><td style=\"background-color:green;\">[torch.Size([1000, 1024])]</td><td style=\"background-color:green;\">[(torch.Size([1000, 91]), torch.Size([1000, 364]))]</td><td style=\"background-color:green;white-space: nowrap;\"><-></td><td style=\"background-color:green;\">[(torch.Size([1000, 91]), torch.Size([1000, 364]))]</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "path_dict = {'backbone.fpn': 'backbone.fpn',\n",
+    "             'roi_heads.box_roi_pool': 'roi_heads.box_roi_pool',\n",
+    "             'roi_heads.box_predictor': 'roi_heads.box_predictor'}\n",
+    "compare_io_shapes(torch.rand(1, 3, 400, 600), faster_rcnn_resnet50, faster_rcnn_resnet18, path_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3 ResNet-50 vs. ResNet-34"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tr style=\"font-weight:bold\"><td style=\"text-align:center\">Teacher path</td><td style=\"text-align:center\">Student Path</td><td colspan=\"3\" style=\"text-align:center;\">Input shape</td><td colspan=\"3\" style=\"text-align:center;\">Output shape</td></tr><tr><td>backbone.fpn</td><td>backbone.fpn</td><td style=\"background-color:red;\">[({0: torch.Size([1, 256, 200, 304]), 1: torch.Size([1, 512, 100, 152]), 2: torch.Size([1, 1024, 50, 76]), 3: torch.Size([1, 2048, 25, 38])},)]</td><td style=\"background-color:red;white-space: nowrap;\"><-></td><td style=\"background-color:red;\">[({0: torch.Size([1, 64, 200, 304]), 1: torch.Size([1, 128, 100, 152]), 2: torch.Size([1, 256, 50, 76]), 3: torch.Size([1, 512, 25, 38])},)]</td><td style=\"background-color:green;\">[{0: torch.Size([1, 256, 200, 304]), 1: torch.Size([1, 256, 100, 152]), 2: torch.Size([1, 256, 50, 76]), 3: torch.Size([1, 256, 25, 38]), 'pool': torch.Size([1, 256, 13, 19])}]</td><td style=\"background-color:green;white-space: nowrap;\"><-></td><td style=\"background-color:green;\">[{0: torch.Size([1, 256, 200, 304]), 1: torch.Size([1, 256, 100, 152]), 2: torch.Size([1, 256, 50, 76]), 3: torch.Size([1, 256, 25, 38]), 'pool': torch.Size([1, 256, 13, 19])}]</td></tr><tr><td>roi_heads.box_roi_pool</td><td>roi_heads.box_roi_pool</td><td style=\"background-color:green;\">[({0: torch.Size([1, 256, 200, 304]), 1: torch.Size([1, 256, 100, 152]), 2: torch.Size([1, 256, 50, 76]), 3: torch.Size([1, 256, 25, 38]), 'pool': torch.Size([1, 256, 13, 19])}, [torch.Size([1000, 4])], [(800, 1200)])]</td><td style=\"background-color:green;white-space: nowrap;\"><-></td><td style=\"background-color:green;\">[({0: torch.Size([1, 256, 200, 304]), 1: torch.Size([1, 256, 100, 152]), 2: torch.Size([1, 256, 50, 76]), 3: torch.Size([1, 256, 25, 38]), 'pool': torch.Size([1, 256, 13, 19])}, [torch.Size([1000, 4])], [(800, 1200)])]</td><td style=\"background-color:green;\">[torch.Size([1000, 256, 7, 7])]</td><td style=\"background-color:green;white-space: nowrap;\"><-></td><td style=\"background-color:green;\">[torch.Size([1000, 256, 7, 7])]</td></tr><tr><td>roi_heads.box_predictor</td><td>roi_heads.box_predictor</td><td style=\"background-color:green;\">[torch.Size([1000, 1024])]</td><td style=\"background-color:green;white-space: nowrap;\"><-></td><td style=\"background-color:green;\">[torch.Size([1000, 1024])]</td><td style=\"background-color:green;\">[(torch.Size([1000, 91]), torch.Size([1000, 364]))]</td><td style=\"background-color:green;white-space: nowrap;\"><-></td><td style=\"background-color:green;\">[(torch.Size([1000, 91]), torch.Size([1000, 364]))]</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "path_dict = {'backbone.fpn': 'backbone.fpn',\n",
+    "             'roi_heads.box_roi_pool': 'roi_heads.box_roi_pool',\n",
+    "             'roi_heads.box_predictor': 'roi_heads.box_predictor'}\n",
+    "compare_io_shapes(torch.rand(1, 3, 400, 600), faster_rcnn_resnet50, faster_rcnn_resnet34, path_dict)"
    ]
   }
  ],
