--- a/src/complexity_analyzer.ipynb
+++ b/src/complexity_analyzer.ipynb
@@ -191,10 +191,10 @@
     }
    ],
    "source": [
-    "faster_rcnn_backbone_resnet18 = rcnn.get_model('faster_rcnn', False, 'resnet18', False)\n",
-    "faster_rcnn_backbone_resnet34 = rcnn.get_model('faster_rcnn', False, 'resnet34', False)\n",
-    "faster_rcnn_backbone_resnet50 = rcnn.get_model('faster_rcnn', False, 'resnet50', False)\n",
-    "faster_rcnn_backbone_resnet101 = rcnn.get_model('faster_rcnn', False, 'resnet101', False)\n",
+    "faster_rcnn_backbone_resnet18 = rcnn.get_model('faster_rcnn', False, backbone_config={'name': 'resnet18', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
+    "faster_rcnn_backbone_resnet34 = rcnn.get_model('faster_rcnn', False, backbone_config={'name': 'resnet34', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
+    "faster_rcnn_backbone_resnet50 = rcnn.get_model('faster_rcnn', False, backbone_config={'name': 'resnet50', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
+    "faster_rcnn_backbone_resnet101 = rcnn.get_model('faster_rcnn', False, backbone_config={'name': 'resnet101', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
     "faster_rcnns = [faster_rcnn_backbone_resnet18, faster_rcnn_backbone_resnet34, faster_rcnn_backbone_resnet50, faster_rcnn_backbone_resnet101]\n",
     "analyze_models(faster_rcnns, rcnn_component_names, ['Faster R-CNN w/ ResNet-18', 'Faster R-CNN w/ ResNet-34', 'Faster R-CNN w/ ResNet-50', 'Faster R-CNN w/ ResNet-101'])"
    ]
@@ -223,10 +223,10 @@
     }
    ],
    "source": [
-    "mask_rcnn_backbone_resnet18 = rcnn.get_model('mask_rcnn', False, 'resnet18', False)\n",
-    "mask_rcnn_backbone_resnet34 = rcnn.get_model('mask_rcnn', False, 'resnet34', False)\n",
-    "mask_rcnn_backbone_resnet50 = rcnn.get_model('mask_rcnn', False, 'resnet50', False)\n",
-    "mask_rcnn_backbone_resnet101 = rcnn.get_model('mask_rcnn', False, 'resnet101', False)\n",
+    "mask_rcnn_backbone_resnet18 = rcnn.get_model('mask_rcnn', False, backbone_config={'name': 'resnet18', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
+    "mask_rcnn_backbone_resnet34 = rcnn.get_model('mask_rcnn', False, backbone_config={'name': 'resnet34', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
+    "mask_rcnn_backbone_resnet50 = rcnn.get_model('mask_rcnn', False, backbone_config={'name': 'resnet50', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
+    "mask_rcnn_backbone_resnet101 = rcnn.get_model('mask_rcnn', False, backbone_config={'name': 'resnet101', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
     "mask_rcnns = [mask_rcnn_backbone_resnet18, mask_rcnn_backbone_resnet34, mask_rcnn_backbone_resnet50, mask_rcnn_backbone_resnet101]\n",
     "analyze_models(mask_rcnns, rcnn_component_names, ['Mask R-CNN w/ ResNet-18', 'Mask R-CNN w/ ResNet-34', 'Mask R-CNN w/ ResNet-50', 'Mask R-CNN w/ ResNet-101'])"
    ]
@@ -255,10 +255,10 @@
     }
    ],
    "source": [
-    "keypoint_rcnn_backbone_resnet18 = rcnn.get_model('keypoint_rcnn', False, 'resnet18', False, num_classes=2)\n",
-    "keypoint_rcnn_backbone_resnet34 = rcnn.get_model('keypoint_rcnn', False, 'resnet34', False, num_classes=2)\n",
-    "keypoint_rcnn_backbone_resnet50 = rcnn.get_model('keypoint_rcnn', False, 'resnet50', False, num_classes=2)\n",
-    "keypoint_rcnn_backbone_resnet101 = rcnn.get_model('keypoint_rcnn', False, 'resnet101', False, num_classes=2)\n",
+    "keypoint_rcnn_backbone_resnet18 = rcnn.get_model('keypoint_rcnn', False, num_classes=2, backbone_config={'name': 'resnet18', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
+    "keypoint_rcnn_backbone_resnet34 = rcnn.get_model('keypoint_rcnn', False, num_classes=2, backbone_config={'name': 'resnet34', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
+    "keypoint_rcnn_backbone_resnet50 = rcnn.get_model('keypoint_rcnn', False, num_classes=2, backbone_config={'name': 'resnet50', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
+    "keypoint_rcnn_backbone_resnet101 = rcnn.get_model('keypoint_rcnn', False, num_classes=2, backbone_config={'name': 'resnet101', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
     "keypoint_rcnns = [keypoint_rcnn_backbone_resnet18, keypoint_rcnn_backbone_resnet34, keypoint_rcnn_backbone_resnet50, keypoint_rcnn_backbone_resnet101]\n",
     "analyze_models(mask_rcnns, rcnn_component_names, ['Keypoint R-CNN w/ ResNet-18', 'Keypoint R-CNN w/ ResNet-34', 'Keypoint R-CNN w/ ResNet-50', 'Keypoint R-CNN w/ ResNet-101'])"
    ]
@@ -280,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
