--- a/src/student_design_helper.ipynb
+++ b/src/student_design_helper.ipynb
@@ -161,9 +161,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "faster_rcnn_resnet18 = rcnn.get_model('faster_rcnn', False, 'resnet18', False)\n",
-    "faster_rcnn_resnet34 = rcnn.get_model('faster_rcnn', False, 'resnet34', False)\n",
-    "faster_rcnn_resnet50 = rcnn.get_model('faster_rcnn', False, 'resnet50', False)"
+    "faster_rcnn_resnet18 = rcnn.get_model('faster_rcnn', False, backbone_config={'name': 'resnet18', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
+    "faster_rcnn_resnet34 = rcnn.get_model('faster_rcnn', False, backbone_config={'name': 'resnet34', 'params': {'pretrained': False, 'freeze_layers': True}})\n",
+    "faster_rcnn_resnet50 = rcnn.get_model('faster_rcnn', False, backbone_config={'name': 'resnet50', 'params': {'pretrained': False, 'freeze_layers': True}})"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
