fixed some bugs

--- a/src/student_design_helper.ipynb
+++ b/src/student_design_helper.ipynb
@@ -197,7 +197,7 @@
     "path_dict = {'backbone.fpn': 'backbone.fpn',\n",
     "             'roi_heads.box_roi_pool': 'roi_heads.box_roi_pool',\n",
     "             'roi_heads.box_predictor': 'roi_heads.box_predictor'}\n",
-    "compare_io_shapes(torch.rand(1, 3, 400, 600), faster_rcnn_resnet34, faster_rcnn_resnet18, path_dict)"
+    "compare_io_shapes([torch.rand(3, 400, 600)], faster_rcnn_resnet34, faster_rcnn_resnet18, path_dict)"
    ]
   },
   {
@@ -231,7 +231,7 @@
     "path_dict = {'backbone.fpn': 'backbone.fpn',\n",
     "             'roi_heads.box_roi_pool': 'roi_heads.box_roi_pool',\n",
     "             'roi_heads.box_predictor': 'roi_heads.box_predictor'}\n",
-    "compare_io_shapes(torch.rand(1, 3, 400, 600), faster_rcnn_resnet50, faster_rcnn_resnet18, path_dict)"
+    "compare_io_shapes([torch.rand(3, 400, 600)], faster_rcnn_resnet50, faster_rcnn_resnet18, path_dict)"
    ]
   },
   {
@@ -263,7 +263,7 @@
     "path_dict = {'backbone.fpn': 'backbone.fpn',\n",
     "             'roi_heads.box_roi_pool': 'roi_heads.box_roi_pool',\n",
     "             'roi_heads.box_predictor': 'roi_heads.box_predictor'}\n",
-    "compare_io_shapes(torch.rand(1, 3, 400, 600), faster_rcnn_resnet50, faster_rcnn_resnet34, path_dict)"
+    "compare_io_shapes([torch.rand(3, 400, 600)], faster_rcnn_resnet50, faster_rcnn_resnet34, path_dict)"
    ]
   }
  ],
